# oxideav-celt

./: CHANGELOG.md  Cargo.toml  NOTICES  README.md
src/: alloc_combine.rs  alloc_exact.rs  allocation_budget.rs  analysis.rs  anti_collapse.rs  band_analysis.rs  band_cap.rs  band_decode.rs  band_energy.rs  band_layout.rs  band_minimums.rs  band_quant.rs  band_split.rs  bands.rs  bit_allocation.rs  bits_to_pulses.rs  coarse_energy.rs  codec.rs  cwrs.rs  decoder.rs  deemphasis.rs  denormalization.rs  derive_pulses.rs  e_prob_model.rs  encoder.rs  encoder_bands.rs  encoder_decisions.rs  fine_energy.rs  frame_decode.rs  frame_encode.rs  frame_header.rs  frame_synthesis.rs  hadamard.rs  header.rs  laplace.rs  lib.rs  mdct.rs  pcm_encode.rs  pitch.rs  pitch_analysis.rs  (+17 more)
tests/: allocation_to_pulses.rs  blackbox_opusdec.rs  blackbox_ref_decode.rs  coarse_energy_frame_roundtrip.rs  control_encode_roundtrip.rs  energy_encode_pipeline.rs  fixture_survey.rs  frame_encode_decode.rs  laplace_roundtrip.rs  pcm_codec_loop.rs  post_filter_edge.rs  public_api_roundtrip.rs  pvq_encode_roundtrip.rs  range_codec_roundtrip.rs  ref_decode_fixtures.rs  ref_encode_interop.rs  roundtrip.rs  stereo_decode.rs  stereo_pcm_codec_loop.rs  stereo_synthesis.rs
tests/common/: mod.rs
