[package]
name = "oxideav-celt"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT AND BSD-3-Clause"
repository = "https://github.com/OxideAV/oxideav-celt"
authors = ["Mark Karpeles"]
description = "Pure-Rust CELT (MDCT path of Opus, RFC 6716) — encoder + decoder, 48 kHz mono/stereo long-block"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-celt"
keywords = ["multimedia", "audio", "celt", "opus", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
