[package]
name = "oxideav-celt"
version = "0.1.5"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-celt"
authors = ["Mark Karpeles"]
description = "Pure-Rust CELT (MDCT path of Opus) — orphan-rebuild scaffold pending clean-room re-implementation."

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-celt"
keywords = ["multimedia", "audio", "celt", "opus", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
